# python-embed-qt-bug

./: CMakeLists.txt  README.md  main.cpp
